tests/snapshots/unparse__09304f0ffe2eb58b.snap
---
source: tests/unparse.rs
expression: "tests/unparse.sql:140"
---
create table types (
    a geometry(point) not null
)

