tests/snapshots/unparse__3a3c956cf64da0c2.snap
---
source: tests/unparse.rs
expression: "tests/unparse.sql:142"
---
create table capitals (
    state char(2) 
)inherits (cities) 

