tests/snapshots/unparse__56353d20c0d500a2.snap
---
source: tests/unparse.rs
expression: "tests/unparse_tests.sql:134"
---
create schema authorization joe 
