tests/snapshots/unparse__8c82d192cc581ad9.snap
---
source: tests/unparse.rs
expression: "tests/unparse.sql:144"
---
create table films2 as select * from films  
