tests/snapshots/unparse__9457a980c19d1eb8.snap
---
source: tests/unparse.rs
expression: "tests/unparse.sql:143"
---
create temporary table temp as select c from t  
