tests/snapshots/unparse__e5008e2cb3b777a0.snap
---
source: tests/unparse.rs
expression: "tests/unparse_tests.sql:263"
---
create type type1 as (attr1 int4, attr2 bool)
