tests/snapshots/unparse__tests_sql_ddl_create_table_sql@1.snap
---
source: tests/unparse.rs
expression: "tests/sql/ddl/create_table.sql:1"
---
CREATE TABLE a (
    id serial PRIMARY KEY,
    value int
)
