tests/snapshots/unparse__tests_sql_ddl_create_table_sql@4.snap
---
source: tests/unparse.rs
expression: "tests/sql/ddl/create_table.sql:4"
---
create table distributors (
    did int,
    name varchar(40),
    unique (name) with (fillfactor = 70) using index tablespace indexes
) with (fillfactor = 70)
