tests/snapshots/unparse__tests_sql_ddl_create_table_sql@5.snap
---
source: tests/unparse.rs
expression: "tests/sql/ddl/create_table.sql:5"
---
create table measurement_y2016m07 partition of measurement (
    unitsales default 0
) for values from ('2016-07-01') to ('2016-08-01') tablespace olddata
