tests/snapshots/unparse__tests_sql_ddl_create_table_sql_1.snap
---
source: tests/unparse.rs
expression: "tests/sql/ddl/create_table.sql:1"
---
create table a (
    id serial primary key,
    value int
)
