tests/snapshots/unparse__tests_sql_ddl_create_table_sql_2.snap
---
source: tests/unparse.rs
expression: "tests/sql/ddl/create_table.sql:2"
---
CREATE TABLE films (
    code char(5),
    title varchar(40),
    did int,
    date_prod date,
    kind varchar(10),
    len interval hour to second (3),
    CONSTRAINT code_title PRIMARY KEY (code, title)
)
